[VL-4] Improve JpaFilmRepositoryTest